<?xml version="1.0"?>
<package format="2">
  <name>controller_5</name>
  <version>1.0.0</version>
  <description>The controller_5 package</description>

  <license>TODO</license>

  <url type="website">https://github.com/JADC362/controller_5</url> 
  
  <author email="ja.duarte10@uniandes.edu.co">John Alejandro Duarte Carrasco</author>
  <author email="js.roncancio@uniandes.edu.co">Jonathan Steven Roncancio</author>
  <author email="s.Devia10@uniandes.edu.co">Santiago Devia Valderrama</author>
  <author email="ma.mozo@uniandes.edu.co">Miguel Angel Mozo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
